...
        }
        
        questionNum += 1
        if questionNum < questionsBasket.questionList.count {
            loadQuestion()
        } else {
            let alert = UIAlertController(title: "Alert", message: "Your score is \(score) please exit the app", preferredStyle: UIAlertController.Style.alert)
            alert.addAction(UIAlertAction(title: "Click", style: UIAlertAction.Style.default, handler: nil))
            self.present(alert, animated: true, completion: nil)
        }
        
    }
    
    func loadQuestion() {
...
