...
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Lz-JY-z1q" userLabel="QuestionView">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="278.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question: What is OnePiece?" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pxn-v9-aVM">
                                                <rect key="frame" x="2" y="80" width="371" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="QuestionLabel"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                        <color key="backgroundColor" red="0.84465640779999995" green="0.51457053419999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
